--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,9 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/app
+    destination: /home/ubuntu/fibonacci
 permissions:
-  - object: /home/ubuntu/app
+  - object: /home/ubuntu/fibonacci
     owner: ubuntu
     group: ubuntu
     mode: 755
