--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,6 @@ hooks:
       timeout: 300
       runas: ubuntu
   ApplicationStart:
-    - location: scripts/start_application.sh
+    - location: scripts/start.sh
       timeout: 300
       runas: ubuntu
