--- a/appspec.yml
+++ b/appspec.yml
@@ -9,6 +9,10 @@ permissions:
     group: ubuntu
     mode: 755
 hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 300
