--- a/appspec.yml
+++ b/appspec.yml
@@ -8,6 +8,14 @@ permissions:
     owner: ubuntu
     group: ubuntu
     mode: 755
+  - object: /home/ubuntu/fibonacci/scripts/before_install.sh
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+  - object: /home/ubuntu/fibonacci/scripts/start.sh
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
