--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,19 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/fibonacci
+permissions:
+  - object: /home/ubuntu/fibonacci
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+  - object: /home/ubuntu/fibonacci/scripts
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
+  - object: /home/ubuntu/fibonacci/scripts/*
+    owner: ubuntu
+    group: ubuntu
+    mode: 755
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
