--- a/appspec.yml
+++ b/appspec.yml
@@ -10,10 +10,10 @@ permissions:
     mode: 755
 hooks:
   BeforeInstall:
-    - location: scripts/before_install.sh
+    - location: /bin/bash scripts/before_install.sh
       timeout: 300
       runas: ubuntu
   ApplicationStart:
-    - location: scripts/start.sh
+    - location: /bin/bash scripts/start.sh
       timeout: 300
       runas: ubuntu
